second try deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Vijayabaskar56.github.io/project-react",
+  "homepage": "https://Vijayabaskar56.github.io/project-react",
   "name": "reactapp",
   "private": true,
   "version": "0.0.0",
